Changed placement data

--- a/team.html
+++ b/team.html
@@ -392,8 +392,9 @@
                         <img class="img-fluid rounded mb-4" src="img/gallery/divyansh.jpg" alt="" >
                         <h5 class="text-dark">Divyansh</h5>
                         <br>
-                        <p class="text-dark">Senior Undergraduate in the Department of CSE</p>
-                        <p class="text-dark">Incoming Research intern at <b>Adobe</b></p>
+                        <p class="text-dark">Incoming IB Quant at <b>Braclays</b></p>
+                        <p class="text-dark">Interned at <b>Adobe</b></p>
+                        <br>
                         <div class="d-flex justify-content-center">
                             <a class="btn btn-square btn-outline-secondary rounded-circle mx-1" href="https://www.linkedin.com/in/divyansh-4152a722a/"><i
                                     class="fab fa-linkedin"></i></a>
@@ -410,8 +411,8 @@
                         <img class="img-fluid rounded mb-4" src="img/gallery/mohika.jpg" alt="">
                         <h5 class="text-dark">Mohika Agarwal</h5>
                         <br>
-                        <p class="text-dark">Incoming Assitant Under Training at <b>ITC</b></p>
-                        <p class="text-dark">Incoming KITES intern at <b>ITC</b></p>
+                        <p class="text-dark">Incoming AUT at <b>ITC</b></p>
+                        <p class="text-dark">Interned at <b>ITC</b></p>
                         <br>
                         <div class="d-flex justify-content-center">
                             <a class="btn btn-square btn-outline-secondary rounded-circle mx-1" href="https://www.linkedin.com/in/mohika-agarwal-42519a236/"><i
@@ -430,7 +431,7 @@
                         <h5 class="text-dark">Mridul Pandey</h5>
                         <br>
                         <p class="text-dark">Incoming Quant researcher at <b>Graviton</b></p>
-                        <p class="text-dark">Incoming Summer Associate at <b>Boston Consulting Group</b></p>
+                        <p class="text-dark">Interned at <b>BCG</b></p>
                         <div class="d-flex justify-content-center">
                             <a class="btn btn-square btn-outline-secondary rounded-circle mx-1" href="https://www.linkedin.com/in/mridul-pandey-946570230/"><i
                                     class="fab fa-linkedin"></i></a>
@@ -446,8 +447,8 @@
                     <div class="team-item rounded p-4 bg-white">
                         <img class="img-fluid rounded mb-4" src="img/nishanth.png" alt="">
                         <h5 class="text-dark">Nishanth Shanmukham</h5>
-                        <p class="text-dark">Senior Undergraduate in the Department of CHE</p>
-                        <p class="text-dark">Incoming Technical Program Manager intern at <b>Microsoft</b></p>
+                        <p class="text-dark">Incoming Technical program manager at <b>Microsoft</b></p>
+                        <p class="text-dark">Interned at <b>Microsoft</b></p>
                         <div class="d-flex justify-content-center">
                             <a class="btn btn-square btn-outline-secondary rounded-circle mx-1" href="https://www.linkedin.com/in/nishanth-shanmukham-c-424b46227/"><i
                                     class="fab fa-linkedin"></i></a>
