--- a/team.html
+++ b/team.html
@@ -447,7 +447,7 @@
                     <div class="team-item rounded p-4 bg-white">
                         <img class="img-fluid rounded mb-4" src="img/nishanth.png" alt="">
                         <h5 class="text-dark">Nishanth Shanmukham</h5>
-                        <p class="text-dark">Incoming Technical program manager at <b>Microsoft</b></p>
+                        <p class="text-dark">Incoming Technical Program Manager at <b>Microsoft</b></p>
                         <p class="text-dark">Interned at <b>Microsoft</b></p>
                         <div class="d-flex justify-content-center">
                             <a class="btn btn-square btn-outline-secondary rounded-circle mx-1" href="https://www.linkedin.com/in/nishanth-shanmukham-c-424b46227/"><i
@@ -474,7 +474,7 @@
                     <div class="team-item rounded p-4 bg-white">
                         <img class="img-fluid rounded mb-4" src="img/vashi.jpeg" alt="" >
                         <h5 class="text-dark">Advait Vashi</h5>
-                        <p class="text-dark">Incoming Associate Consultant at <b>Finmechanics</b><br>
+                        <p class="text-dark">Associate Consultant at <b>Finmechanics</b><br>
                         Interned at <b>National University of Singapore</b></p>
                         <div class="d-flex justify-content-center">
                             <a class="btn btn-square btn-outline-secondary rounded-circle mx-1" href="https://www.linkedin.com/in/advait-vashi-328095212/"><i
@@ -491,7 +491,7 @@
                     <div class="team-item rounded p-4 bg-white">
                         <img class="img-fluid rounded mb-4" src="img/aryan.jpeg" alt="">
                         <h5 class="text-dark">Aryan Vora</h5>
-                        <p class="text-dark">Incoming Associate at <b>Alvarez & Marsal</b><br>
+                        <p class="text-dark">Associate at <b>Alvarez & Marsal</b><br>
                             Interned at <b>Bain & Company</b><br><br></p>
                         <div class="d-flex justify-content-center">
                             <a class="btn btn-square btn-outline-secondary rounded-circle mx-1" href="https://www.linkedin.com/in/aryan-vora-277726222/"><i
@@ -508,7 +508,7 @@
                     <div class="team-item rounded p-4 bg-white">
                         <img class="img-fluid rounded mb-4" src="img/shivangi.jpeg" alt="">
                         <h5 class="text-dark">Shivangi Yadav</h5>
-                        <p class="text-dark">Incoming MC Delivery Associate at <b>Accenture</b><br>
+                        <p class="text-dark">MC Delivery Associate at <b>Accenture</b><br>
                             Interned at <b>Bain & Company</b><br><br></p>
                         <div class="d-flex justify-content-center">
                             <a class="btn btn-square btn-outline-secondary rounded-circle mx-1" href="https://www.linkedin.com/in/shivangi-yadav-2ba103206/"><i
@@ -525,7 +525,7 @@
                     <div class="team-item rounded p-4 bg-white">
                         <img class="img-fluid rounded mb-4" src="img/shreyansh.jpg" alt="">
                         <h5 class="text-dark">Shreyansh Agarwal</h5>
-                        <p class="text-dark">Incoming Associate at <b>Boston Consulting Group</b><br>
+                        <p class="text-dark">Associate at <b>Boston Consulting Group</b><br>
                             Interned at <b>Boston Consulting Group</b></p>
                         <div class="d-flex justify-content-center">
                             <a class="btn btn-square btn-outline-secondary rounded-circle mx-1" href="https://www.linkedin.com/in/shreyansh-agarwal-9a0482131/"><i
