--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>IITK Consulting Group</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta content="Handing out pro-bono data-driven consultancy to non-profits and social organisations using data science and machine learning" name="description">
 
     <!-- Favicon -->
     <link href="img/logo.png" rel="icon">
