--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <meta content="" name="keywords">
     <meta content="Handing out pro-bono data-driven consultancy to non-profits and social organisations using data science and machine learning" name="description">
 
+    <!-- Open Graph / LinkedIn / Facebook / WhatsApp -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://iitkconsult.org/">
+    <meta property="og:title" content="IITK Consulting Group">
+    <meta property="og:description" content="Handing out pro-bono data-driven consultancy to non-profits and social organisations using data science and machine learning">
+    <meta property="og:image" content="https://iitkconsult.org/img/logo.png">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://iitkconsult.org/">
+    <meta name="twitter:title" content="IITK Consulting Group">
+    <meta name="twitter:description" content="Handing out pro-bono data-driven consultancy to non-profits and social organisations using data science and machine learning">
+    <meta name="twitter:image" content="https://iitkconsult.org/img/logo.png">
+    
     <!-- Favicon -->
     <link href="img/logo.png" rel="icon">
 
