--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <meta content="" name="keywords">
     <meta content="Handing out pro-bono data-driven consultancy to non-profits and social organisations using data science and machine learning" name="description">
 
+    <!-- Google Analytics tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GEGN8DSRZM"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-GEGN8DSRZM');
+    </script>
+    
     <!-- Open Graph / LinkedIn / Facebook / WhatsApp -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://iitkconsult.org/">
