--- a/archives.html
+++ b/archives.html
@@ -9,6 +9,16 @@
         <meta content="" name="description">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!-- Google Analytics tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-GEGN8DSRZM"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+        
+          gtag('config', 'G-GEGN8DSRZM');
+        </script>
         
         <!-- Favicon -->
         <link href="img/logo.png" rel="icon">
