--- a/team.html
+++ b/team.html
@@ -8,6 +8,16 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
+    <!-- Google Analytics tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GEGN8DSRZM"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-GEGN8DSRZM');
+    </script>
+
     <!-- Favicon -->
     <link href="img/logo.png" rel="icon">
 
