--- a/projects.html
+++ b/projects.html
@@ -786,7 +786,7 @@
                         </div>
                     </div>
                     <!--#10-->
-                    <div class="col-lg-4 col-md-6 pt-5 wow fadeInUp" data-wow-delay="0.1s">
+<!--                     <div class="col-lg-4 col-md-6 pt-5 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="service-item d-flex h-100">
                             <div class="service-img">
                                 <img class="img-fluid" src="img/black_bg.jpg" alt="">
@@ -809,7 +809,7 @@
                                 </a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- end -->
                 </div>
             </div>
