--- a/team.html
+++ b/team.html
@@ -402,7 +402,7 @@
                         <img class="img-fluid rounded mb-4" src="img/gallery/divyansh.jpg" alt="" >
                         <h5 class="text-dark">Divyansh</h5>
                         <br>
-                        <p class="text-dark">Incoming IB Quant at <b>Braclays</b></p>
+                        <p class="text-dark">Incoming IB Quant at <b>Barclays</b></p>
                         <p class="text-dark">Interned at <b>Adobe</b></p>
                         <br>
                         <div class="d-flex justify-content-center">
